pin show image width fixed on safari

--- a/app/assets/stylesheets/pinShow.scss
+++ b/app/assets/stylesheets/pinShow.scss
@@ -1,5 +1,5 @@
 .image-show-pin {
-  max-width: 470px;
+  max-width: 100%;
   border-radius: 16px;
   height: auto;
   min-width: 508px;
